feat(updates, settings): add beta update channel and settings UI
Add full opt-in beta update channel support and associated mod settings:
- Add persistent `ModSettings` class with `betaParticipate` config flag
- Implement `GeneralSettingsDialog` for toggling beta participation with localized labels and tooltips
- Update `FeatureSettingDialog` to add a settings button opening the general settings dialog
- Rework `UpdateService` to use GitHub releases directly for beta channel, skipping mod.hjson fetch
- Update `UpdateDialog` to install exact release tags for beta updates
- Add `ChangelogFormatter` utilities for parsing release tags and filtering prereleases
- Add comprehensive unit tests for all new logic
- Adjust layout benchmark thresholds for updated performance expectations
- Update mod version and reorganize openspec documentation